selfhost/test/lexer/comments_error_multiline_unclosed.out
Error at %FILE_NAME%:4:11
Unexpected end of file:
  |  disappear
               ^